--- a/conf/application.conf
+++ b/conf/application.conf
@@ -66,3 +66,5 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+host.url = ics.internal.bmjgroup.com
+host.port = 6700
